movie description column added to prevent too much text extending across the screen

--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -5,3 +5,11 @@
 .form-label {
   font-family: 'Raleway', sans-serif;
 }
+
+#inner-col {
+  padding: 0;
+}
+
+div h3, div h2 {
+  margin-top: 10px;
+}
